// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The FeedView component renders correctly 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "channelType": "bob",
        "coverImage": Array [
          Object {
            "height": 400,
            "uri": "https://picsum.photos/600/400/?random",
            "width": 600,
          },
        ],
        "id": "1",
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "#fa8072",
            },
          },
          "isLight": true,
        },
        "title": "hi",
      },
      Object {
        "channelType": "bob 2",
        "coverImage": Array [
          Object {
            "height": 400,
            "uri": "https://picsum.photos/600/400/?random",
            "width": 600,
          },
        ],
        "id": "2",
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "#e9967a",
            },
          },
          "isLight": true,
        },
        "title": "hi 2",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={0.7}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshing={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "paddingVertical": 5,
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor="#fa8072"
        style={
          Object {
            "backgroundColor": "#fa8072",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "height": 400,
                    "uri": "https://picsum.photos/600/400/?random",
                    "width": 600,
                  },
                ]
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "opacity": 0,
                }
              }
            />
            <BVLinearGradient
              colors={
                Array [
                  16416882,
                  4294606962,
                ]
              }
              endPoint={
                Object {
                  "x": 0,
                  "y": 1,
                }
              }
              locations={
                Array [
                  0.3,
                  1,
                ]
              }
              startPoint={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
              hi
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#505050",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 14,
                      "lineHeight": 15.78,
                    }
                  }
                >
                  Bob
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor="#e9967a"
        style={
          Object {
            "backgroundColor": "#e9967a",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "height": 400,
                    "uri": "https://picsum.photos/600/400/?random",
                    "width": 600,
                  },
                ]
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "opacity": 0,
                }
              }
            />
            <BVLinearGradient
              colors={
                Array [
                  15308410,
                  4293498490,
                ]
              }
              endPoint={
                Object {
                  "x": 0,
                  "y": 1,
                }
              }
              locations={
                Array [
                  0.3,
                  1,
                ]
              }
              startPoint={
                Object {
                  "x": 0,
                  "y": 0,
                }
              }
              style={
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
              hi 2
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#505050",
                      "fontFamily": "OpenSans-Regular",
                      "fontSize": 14,
                      "lineHeight": 15.78,
                    }
                  }
                >
                  Bob 2
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`The FeedView component renders empty state 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId0",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId1",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId2",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId3",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId4",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId5",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId6",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId7",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId8",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
      Object {
        "channelType": "",
        "coverImage": Array [],
        "id": "fakeId9",
        "isLoading": true,
        "theme": Object {
          "colors": Object {
            "background": Object {
              "paper": "",
            },
          },
          "isLight": "",
        },
        "title": "",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onContentSizeChange={[Function]}
  onEndReached={false}
  onEndReachedThreshold={0.7}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshing={true}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Object {
      "paddingVertical": 5,
    }
  }
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        cardColor=""
        style={
          Object {
            "backgroundColor": "#505050",
            "borderRadius": 6,
            "marginHorizontal": 10,
            "marginVertical": 5,
            "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
            "shadowOffset": Object {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 1,
            "shadowRadius": 3,
          }
        }
      >
        <View
          style={
            Object {
              "borderRadius": 6,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Object {
                "aspectRatio": 1,
                "width": "100%",
              }
            }
          >
            <Image
              onLoad={[Function]}
              source={Array []}
              style={
                Object {
                  "backgroundColor": "#858585",
                  "opacity": 0,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "paddingBottom": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 15,
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 25.2,
                  "lineHeight": 31.28,
                }
              }
            >
               
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "flexWrap": "wrap",
                "justifyContent": "space-between",
                "paddingHorizontal": 20,
                "paddingTop": 5,
                "paddingVertical": 20,
              }
            }
          >
            <View
              flexed={true}
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  Object {
                    "flex": 1,
                    "paddingRight": 10,
                  }
                }
                withIcon={null}
              >
                <View
                  style={
                    Object {
                      "alignSelf": "stretch",
                      "backgroundColor": "#858585",
                      "borderRadius": 6,
                      "height": 14,
                      "marginVertical": 0.8899999999999997,
                      "width": "40%",
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
